--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "three-demo",
   "version": "0.0.0",
   "scripts": {
+    "type": "module",
     "start": "node main.js",
     "dev": "vite",
     "build": "vite build",
