--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "type": "module",
-    "start": "node main.js",
+    "start": "node main.mjs",
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
